--- a/public/styles/grid.css
+++ b/public/styles/grid.css
@@ -47,7 +47,7 @@
 }
 
 .grid.image {
-	background-image: url('../images/thailand.jpg');
+	background-image: url('https://images.pexels.com/photos/1779746/pexels-photo-1779746.jpeg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
