--- a/src/styles/burger.css
+++ b/src/styles/burger.css
@@ -1,20 +1,21 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-	position: fixed;
+	position: absolute;
 	width: 36px;
 	height: 30px;
 	left: 36px;
-	top: 36px;
+	top: 15px;
 }
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
 	background: #373a47;
+	border-radius: 10px;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-	background: #a90000;
+	background: #black;
 }
 
 /* Position and sizing of clickable cross button */
@@ -24,9 +25,9 @@
 }
 
 /* Color/shape of close button cross */
-.bm-cross {
+/* .bm-cross {
 	background: #bdc3c7;
-}
+} */
 
 /*
 Sidebar wrapper styles
@@ -34,12 +35,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
 	position: fixed;
-	height: 100%;
+	height: 30%;
 }
 
 /* General sidebar styles */
 .bm-menu {
-	background: #373a47;
+	background: #white;
 	padding: 2.5em 1.5em 0;
 	font-size: 1.15em;
 }
