--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -13,7 +13,7 @@
 	padding: 18px 20px;
 	cursor: pointer;
 	border-radius: 4px;
-	transition: background .3s;
+	transition: background 0.3s;
 	display: block;
 	text-decoration: none;
 	color: black;
@@ -24,6 +24,6 @@
 }
 
 .sidebar ul li.active a {
-	background: #00988f;
+	background: #1a5320;
 	color: white;
 }
