--- a/src/styles/burger.css
+++ b/src/styles/burger.css
@@ -10,11 +10,12 @@
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
 	background: #373a47;
+	border-radius: 10px;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-	background: #a90000;
+	background: #black;
 }
 
 /* Position and sizing of clickable cross button */
