--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,6 +1,4 @@
 .gallery {
-	display: grid;
-	grid-template-columns: 1fr;
 	border-bottom: 1px solid #e2e2e2;
 }
 
@@ -33,11 +31,13 @@
 }
 
 .gallery .thumbnails {
-	padding: 50px;
+	padding: 20px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 50px;
+	grid-column-gap: 30px;
 	grid-row-gap: 30px;
+	background-color: rgba(255, 255, 255, 0.8);
+	margin-top: 30px;
 }
 
 .gallery .thumbnail {
