--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,10 +1,18 @@
 .sidebar {
 	height: 100vh;
-	margin-top: 50px;
-	width: 100px;
+	width: 100%;
 	background-color: white;
 }
 
+.loggedIn,
+.guest {
+	position: fixed;
+	width: 200px;
+}
+
+.sidebar h4 {
+	margin: 0px;
+}
 .sidebar.image {
 	background-image: url('https://images.pexels.com/photos/1877487/pexels-photo-1877487.jpeg');
 	background-position: center;
