--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -2,11 +2,17 @@
 	display: grid;
 }
 
+.grid.form {
+	width: 600px;
+	height: 700px;
+	padding: 30px;
+	border-radius: 3px;
+}
+
 .grid.transparent {
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.85);
 }
 .grid.center {
-	grid-template-columns: 400px;
 	justify-content: center;
 }
 
@@ -19,7 +25,7 @@
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 30px;
 	padding: 10px;
-	height: calc(100vh - 142px); /* subtract nav & filter */
+	height: 100vh;
 	overflow-y: auto;
 }
 
