--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -9,6 +9,15 @@
 	border-radius: 3px;
 }
 
+.grid.createform {
+	margin: 30px 0px;
+	width: 600px;
+	height: 1200px;
+	padding: 30px;
+	border-radius: 3px;
+	background-color: rgba(255, 255, 255, 0.85);
+}
+
 .grid.transparent {
 	background-color: rgba(255, 255, 255, 0.85);
 }
@@ -85,6 +94,7 @@
 	background-repeat: no-repeat;
 	height: 100vh;
 	background-attachment: fixed;
+	overflow-y: scroll;
 }
 
 .grid.image2 {
