--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -5,6 +5,7 @@
 	grid-template-columns: 50px auto;
 	grid-column-gap: 10px;
 	cursor: pointer;
+	margin: 30px;
 }
 
 .user .avatar {
@@ -23,10 +24,18 @@
 	color: #969696;
 }
 
+.user.padding {
+	padding: 0px 10px 10px 10px;
+}
+
 small + .user {
 	margin-top: 30px;
 }
 
 .user + .card {
 	margin-top: 30px;
+}
+
+.user margin {
+	margin: 10px;
 }
