--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -1,13 +1,17 @@
 .popup {
-	position: fixed;
-	width: 100%;
-	height: 100%;
+	position: absolute;
+	width: 700px;
+	height: 150px;
+	align-items: center;
+	border-color: rgb(37, 120, 69);
+	border-width: medium;
+	border-style: solid;
 	top: 0;
-	left: 0;
+	left: 190px;
 	right: 0;
 	bottom: 0;
 	margin: auto;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: white;
 }
 .popup\_inner {
 	position: absolute;
