--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -21,9 +21,12 @@
 .grid.titlespot {
 	margin: 30px;
 }
-.grid.transparent {
+
+.transparent {
 	background-color: rgba(255, 255, 255, 0.85);
+	margin-top: 30px;
 }
+
 .grid.center {
 	justify-content: center;
 }
@@ -36,15 +39,14 @@
 .grid.two {
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 30px;
-	padding: 10px;
-	height: auto;
-	overflow-y: auto;
+	/* padding: 10px; */
 }
 
 .grid.scroll {
 	overflow-y: auto;
 	height: calc(100vh - 142px); /* subtract nav & filter */
 }
+
 .grid.twocards {
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 30px;
@@ -122,7 +124,22 @@
 
 .grid.full {
 	height: 100vh;
-	width: 100vw;
+	overflow-y: scroll;
+	padding: 30px;
+}
+
+.details {
+	padding: 30px;
+	margin-bottom: 30px;
+}
+
+.details li {
+	list-style: none;
+	margin-bottom: 10px;
+}
+
+.details li i {
+	margin-right: 10px;
 }
 
 .grid.image > .card {
