--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -22,6 +22,9 @@
 	margin: 30px;
 }
 
+.sidetransparent {
+	background-color: rgba(255, 255, 255, 0.85);
+}
 .transparent {
 	background-color: rgba(255, 255, 255, 0.85);
 	margin-top: 30px;
