--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -8,14 +8,23 @@
 	padding: 30px;
 	border-radius: 3px;
 }
-
+.grid .autoheight {
+	height: 720px;
+}
 .grid.createform {
 	margin: 30px 0px;
 	width: 600px;
-	height: 1200px;
+	height: auto;
 	padding: 30px;
 	border-radius: 3px;
 	background-color: rgba(255, 255, 255, 0.85);
+}
+
+.grid .profileform {
+	width: 600px;
+	height: 750px;
+	padding: 30px;
+	border-radius: 3px;
 }
 
 .grid.titlespot {
@@ -43,6 +52,10 @@
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 30px;
 	/* padding: 10px; */
+}
+
+.grid.twospots {
+	grid-template-columns: 3fr 2fr;
 }
 
 .grid.scroll {
