--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -33,7 +33,18 @@
 	padding-bottom: 10px;
 }
 
+.createheader {
+	text-align: center;
+	font-family: 'EB Garamond', serif;
+	font-size: 40px;
+}
+
 .loginfont {
 	font-family: 'EB Garamond', serif;
+	font-size: 20px;
+}
+
+.loginfonttitle {
+	font-family: 'Cormorant Garamond', serif;
 	font-size: 20px;
 }
