--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -32,7 +32,7 @@
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 30px;
 	grid-row-gap: 30px;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255);
 	margin-top: 30px;
 }
 
