--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -31,9 +31,6 @@
 	margin: 30px;
 }
 
-.sidetransparent {
-	background-color: rgba(255, 255, 255, 0.85);
-}
 .transparent {
 	background-color: rgba(255, 255, 255, 0.85);
 	margin-top: 30px;
@@ -150,7 +147,7 @@
 }
 
 .details {
-	padding: 30px;
+	padding: 30px 30px 60px 30px;
 	margin-bottom: 30px;
 }
 
