--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -11,7 +11,7 @@
 }
 
 .sidetransparent {
-	background-color: rgba(255, 255, 255, 0.85);
+	background-color: rgba(255, 255, 255);
 }
 .sidebar .font {
 	font-family: 'EB Garamond', serif;
