--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,8 +1,8 @@
 form input {
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	font-size: 16px;
-	padding: 10px 15px;
+	padding: 5px;
 	box-sizing: border-box;
 	border-radius: 4px;
 	border: 1px solid #e2e2e2;
@@ -19,7 +19,7 @@ form label {
 }
 
 form .group + .group {
-	margin-top: 30px;
+	margin-top: 10px;
 }
 
 form .group + button {
