--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -22,8 +22,8 @@
 
 .grid .profileform {
 	width: 600px;
-	height: 750px;
-	padding: 30px;
+	height: auto;
+	padding: 30px 30px 0px 30px;
 	border-radius: 3px;
 }
 
