--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -15,7 +15,7 @@
 	height: auto;
 	width: 400px;
 	border-radius: 3px;
-	padding: 20px;
+	padding: 15px 20px;
 	background-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -54,4 +54,5 @@
 	font-size: 20px;
 	color: #972822;
 	font-style: italic;
+	margin: 0px;
 }
