--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -50,7 +50,7 @@
 }
 .aboutspotfont {
 	font-family: 'EB Garamond', serif;
-	font-size: 35px;
+	font-size: 28px;
 	padding-top: 10px;
 }
 
@@ -58,4 +58,11 @@
 	font-family: 'EB Garamond', serif;
 	font-size: 20px;
 	padding-top: 10px;
+}
+
+.spotheading {
+	height: auto;
+	background-color: white;
+	padding: 20px;
+	margin-bottom: 30px;
 }
