--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -5,6 +5,18 @@
 	padding: 20px;
 }
 
+.landingbackground {
+	display: grid;
+	background-image: -webkit-linear-gradient(135deg, #d1eecc 50%, #94d3ac 50%);
+	/* background: linear-gradient(to left top, #d1eecc, #94d3ac); */
+	/* background-color: #d1eecc; */
+	height: 100vh;
+	justify-content: center;
+	overflow-y: scroll;
+	align-content: center;
+	padding-left: 200px;
+}
+
 .search {
 	border: none;
 	font-size: 19px;
