--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
 	height: 100vh;
 	width: 100%;
-	background-color: white;
+	background-color: #d2e1c8;
 }
 
 .loggedIn,
@@ -11,7 +11,7 @@
 }
 
 .sidetransparent {
-	background-color: rgba(255, 255, 255);
+	background-color: rgba(255, 255, 255, 0.3);
 }
 .sidebar .font {
 	font-family: 'EB Garamond', serif;
@@ -20,12 +20,6 @@
 }
 .sidebar h4 {
 	margin: 0px;
-}
-.sidebar.image {
-	background-image: url('https://images.pexels.com/photos/1877487/pexels-photo-1877487.jpeg');
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 
 .sidebar ul {
