--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,20 +1,8 @@
 .landing {
 	border-radius: 3px;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: #effcef;
 	width: 50vw;
 	padding: 20px;
-}
-
-.landingbackground {
-	display: grid;
-	background-image: -webkit-linear-gradient(135deg, #d1eecc 50%, #94d3ac 50%);
-	/* background: linear-gradient(to left top, #d1eecc, #94d3ac); */
-	/* background-color: #d1eecc; */
-	height: 100vh;
-	justify-content: center;
-	overflow-y: scroll;
-	align-content: center;
-	padding-left: 200px;
 }
 
 .search {
