--- a/src/styles/universal.css
+++ b/src/styles/universal.css
@@ -1,10 +1,13 @@
-.backgroundimage {
+.background {
 	display: grid;
-
+	background-image: -webkit-linear-gradient(130deg, #d1eecc 50%, #94d3ac 50%);
+	/* background: linear-gradient(to left top, #d1eecc, #94d3ac); */
+	/* background-color: #d1eecc; */
 	height: 100vh;
 	justify-content: center;
 	overflow-y: scroll;
 	align-content: center;
+	padding-left: 200px;
 }
 
 .spotsbackgroundimage {
