--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -4,6 +4,16 @@
 	font-size: 35px;
 }
 
+.createform {
+	margin: 30px 0px;
+	width: 600px;
+	height: auto;
+	padding: 30px;
+	padding-top: 40px;
+	border-radius: 3px;
+	background-color: rgba(255, 255, 255, 0.85);
+}
+
 .createformfont {
 	font-family: 'EB Garamond', serif;
 	font-size: 18px;
