--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -7,19 +7,11 @@
 .grid .autoheight {
 	height: 720px;
 }
-.grid.createform {
-	margin: 30px 0px;
-	width: 600px;
-	height: auto;
-	padding: 30px;
-	border-radius: 3px;
-	background-color: rgba(255, 255, 255, 0.85);
-}
 
-.grid .profileform {
+.profileform {
 	width: 600px;
 	height: auto;
-	padding: 30px 30px 0px 30px;
+	padding: 30px 30px 30px 30px;
 	border-radius: 3px;
 }
 
