--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -11,7 +11,7 @@
 	padding: 30px;
 	padding-top: 40px;
 	border-radius: 3px;
-	background-color: rgba(255, 255, 255, 0.85);
+	background-color: #effcef;
 }
 
 .createformfont {
