--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,7 +3,7 @@
 	width: 400px;
 	border-radius: 3px;
 	padding: 15px 20px;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: #effcef;
 }
 
 .loginsignupform {
@@ -11,7 +11,7 @@
 	height: 800px;
 	border-radius: 3px;
 	padding: 20px;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: #effcef;
 }
 .loginheader {
 	text-align: center;
