--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
 	height: 100vh;
 	width: 100%;
-	background-color: #d2e1c8;
+	background-color: #effcef;
 }
 
 .loggedIn,
@@ -10,9 +10,6 @@
 	width: 200px;
 }
 
-.sidebar {
-	background-color: #d1eecc;
-}
 .sidebar .font {
 	font-family: 'EB Garamond', serif;
 	padding: 10px;
