disabled old css

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,4 +1,4 @@
-.landing {
+/* .landing {
 	border-radius: 3px;
 	background-color: #effcef;
 	width: 50vw;
@@ -51,4 +51,4 @@
 	font-family: 'EB Garamond', serif;
 	padding: 10px;
 	font-size: 40px;
-}
+} */
