--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -6,7 +6,7 @@
 	align-items: center;
 	text-align: center;
 	color: white;
-	background-image: url('https://via.placeholder.com/300/09f/fff.png');
+	background-image: url('https://i.pinimg.com/1200x/37/5e/00/375e00f56d6a173f69d0dc108f1564e4.jpg');
 	min-height: 380px;
 	background-position: center;
 	background-repeat: no-repeat;
