--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,4 +1,4 @@
-form input {
+/* form input {
 	width: 100%;
 	height: 40px;
 	font-size: 16px;
@@ -77,7 +77,7 @@ h2 + form {
 }
 */
 
-form .rating {
+/* form .rating {
 	cursor: pointer;
 	font-size: 14px;
 	margin: 10px 0;
@@ -86,4 +86,4 @@ form .rating {
 .labelfont {
 	font-family: 'EB Garamond', serif;
 	font-size: 20px;
-}
+} */
