--- a/src/styles/universal.css
+++ b/src/styles/universal.css
@@ -1,5 +1,5 @@
-.background {
-	background-image: -webkit-linear-gradient(130deg, #ccedd2 50%, #94d3ac 50%);
+/* .background {
+	background-image: -webkit-linear-gradient(130deg, #e3d17b 50%, #94d3ac 50%);
 	height: 100vh;
 	overflow-y: scroll;
 	align-content: center;
@@ -40,4 +40,4 @@
 	text-align: center;
 	font-family: 'EB Garamond', serif;
 	font-size: 50px;
-}
+} */
