--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -3,14 +3,28 @@
 	width: 100vw;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
 	align-items: center;
 	text-align: center;
 	background-image: url('https://images.pexels.com/photos/2505705/pexels-photo-2505705.jpeg');
 	/* background-image: url('https://images.pexels.com/photos/3551355/pexels-photo-3551355.jpeg'); */
 	/* background-image: url('https://i.pinimg.com/1200x/37/5e/00/375e00f56d6a173f69d0dc108f1564e4.jpg'); */
 	opacity: 0.8;
-	min-height: 380px;
+	/* min-height: 380px; */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	background-attachment: fixed;
+}
+
+/* the background behind the nav idk css sux*/
+.bg-img-nav {
+	/* width: 100vw;
+	height: 10vh; */
+	display: flex;
+	background-image: url('https://images.pexels.com/photos/2505705/pexels-photo-2505705.jpeg');
+	opacity: 0.8;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -41,7 +55,7 @@
 .center-img {
 	position: absolute;
 	/* margin: 50px 50px 1px 50px; */
-	padding: 230px;
+	padding: 200px;
 	z-index: 5px;
 	background-position: center;
 	justify-content: center;
@@ -70,13 +84,13 @@
 	border-radius: 5px;
 	overflow: hidden;
 	width: 350px;
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
 .searchIcon {
 	padding: 0.5rem;
 	background-color: white;
-	color: #939393;
+	color: #7dbb9d;
 	background-position: center;
 }
 
@@ -90,7 +104,6 @@ textarea:focus,
 input:focus {
 	outline: none;
 }
-
 /* end search bar */
 
 /* .landing {
