--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
 	height: 100vh;
 	width: 100%;
 	background-color: #effcef;
@@ -43,4 +43,4 @@
 
 .sidebar ul li.active a {
 	color: #1a5320;
-}
+} */
