--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -33,14 +33,14 @@
 
 .grid.two {
 	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 30px;
-	/* padding: 10px; */
+	grid-column-gap: 10px;
+	padding: 10px;
 }
 
 .gridheading {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
-	grid-column-gap: 30px;
+	grid-column-gap: 10px;
 }
 
 .grid.twospots {
